Sun Feb 13 15:23:03 CET 2000  Sven Neumann <sven@gimp.org>

	* app/channel_dialog.c
	* app/layers_dialog.c: provided a proper fix for bug #2518

2000-02-13  Michael Natterer  <mitch@gimp.org>

	* app/brush_select.c
	* app/paint_options.h
	* app/tool_options.c: use new function
	paint_mode_menu_set_paint_mode() instead of
	gtk_option_menu_set_history() because the order of paint modes in
	the menu is different from the one in the LayerModeEffects enum
	(fixes bug #6190). Create the menu with the libgimp menu
	constructor.

Sun Feb 13 13:03:38 CET 2000  Sven Neumann <sven@gimp.org>

	* app/gimpui.c
	* plug-ins/common/max_rgb.c: tupos

Sun Feb 13 12:08:02 CET 2000  Sven Neumann <sven@gimp.org>

	* app/channels_dialog.c: Reverted bogus change by Daniel Egger.
	This variable is supposed to be static and functions never get 
	interrupted by dnd events.

	* plug-ins/gfli/gfli.c: polished it a bit more

2000-02-13  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* plug-ins/common/CML_explorer.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/destripe.c
	* plug-ins/common/edge.c
	* plug-ins/common/fractaltrace.c
	* plug-ins/common/gqbist.c: unmarked blurb and help.

	* plug-ins/script-fu/script-fu-console.c: minor i18n fix.

Sat Feb 12 17:49:02 PST 2000 Manish Singh <yosh@gimp.org>

	* plug-ins/bmp/Makefile.am
	* plug-ins/fits/Makefile.am
	* plug-ins/helpbrowser/Makefile.am
	* plug-ins/print/Makefile.am
	* plug-ins/sgi/Makefile.am: reorder linking for libgimpui comes
	before libgimp; seemed to be causing problems despite libtool

Sun Feb 13 01:19:30 GMT 2000 Nick Lamb <njl195@zepler.org.uk>

	* plug-ins/script-fu/scripts/*: Tidying up, typos, better help

Sun Feb 13 01:09:42 CET 2000  Marc Lehmann <pcg@goof.com>

        * po/gimp.pot, plug-ins/perl/po/gimp-perl.pot: Removed from CVS.

Thu Feb 10 17:40:13 CET 2000  Daniel Egger <Daniel.Egger@suse.de>

	(applied by pcg@goof.com)

	* app/channels_dialog.c: Static variables in fuctions keep